tests/NormalTests/paczka1/fuzzy1/42915279.err
Error in line 8: 7vFaWsxk9O7 A306 29,7
Error in line 6: DZq7x5DkWk A306 84,0
Error in line 13: DZq7x5DkWk S347 88,3
Error in line 28: 4ueEjDNrdqK S347 38,4
